Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15379

Code completion inserts incorrectly in QML file

XMLWordPrintable

      1. Open a QML file.
      2. In the file, type a misspelled item name, e.g. "Rextangle".
        This will be underlined because it is a syntax error.
      3. Move the cursor back to the wrong character and fix it, e.g. change the "x" to "c".
        Creator will show a code completion popup offering the correct item name, e.g. "Rectangle".
      4. Press Enter.
        Creator will insert the item name regardless of what's already written, e.g. you will get something like "Rectangletangle".

      After inserting, the item name should be correct. In C++ files, this works correctly.

        For Gerrit Dashboard: QTCREATORBUG-15379
        # Subject Branch Project Status CR V

            mabenell Marco Benelli
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes