QmlJsEditor: unify behavior of autocompletion to C++ editor.

Changed behavior of autocompletion for uniformity with C++ completion.
E.g: changing 'x' to 'c' in "Rextangle" used to trigger completion,
resulting in: "Rectangletangle".

Task-number: QTCREATORBUG-15379
Change-Id: I0597a8d76843b8f1c20c39877267aa70a6b0e1a2
Reviewed-by: Robert Loehning <robert.loehning@theqtcompany.com>
Reviewed-by: Erik Verbruggen <erik.verbruggen@theqtcompany.com>